Lose the headless dep and let travis handle it.
http://about.travis-ci.org/docs/user/selenium-setup/

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ notifications:
     - jari.bakken@gmail.com
   irc: "irc.freenode.net#watir"
 before_script: 
+  - sh -e /etc/init.d/xvfb start
   - git submodule update --init
