See if we can get travis to run chrome.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 rvm:
   - 1.9.2
-  - 1.9.3
 notifications:
   recipients:
     - jari.bakken@gmail.com
@@ -8,3 +7,12 @@ notifications:
 before_script:
   - sh -e /etc/init.d/xvfb start
   - git submodule update --init
+  - wget -q -O – https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+  - sudo echo 'deb http://dl.google.com/linux/deb/ stable non-free main' >> /etc/apt/sources.list
+  - sudo apt-get update
+  - sudo apt-get install google-chrome-unstable funzip
+  - sudo wget -O - http://chromium.googlecode.com/files/chromedriver_linux32_14.0.836.0.zip | funzip > /usr/bin/chromedriver
+  - sudo chmod +x /usr/bin/chromedriver
+env:
+  - WATIR_WEBDRIVER_BROWSER=firefox
+  - WATIR_WEBDRIVER_BROWSER=chrome
