--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_script:
 env:
   - WATIR_WEBDRIVER_BROWSER=firefox
   - WATIR_WEBDRIVER_BROWSER=firefox ALWAYS_LOCATE=false
-  - WATIR_WEBDRIVER_BROWSER=firefox NATIVE_EVENTS=true
+  # - WATIR_WEBDRIVER_BROWSER=firefox NATIVE_EVENTS=true
   - WATIR_WEBDRIVER_BROWSER=chrome ALWAYS_LOCATE=false
-  - WATIR_WEBDRIVER_BROWSER=chrome NATIVE_EVENTS=true
+  # - WATIR_WEBDRIVER_BROWSER=chrome NATIVE_EVENTS=true
