Try a build with native events enabled.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
 env:
   - WATIR_WEBDRIVER_BROWSER=firefox
   - WATIR_WEBDRIVER_BROWSER=firefox ALWAYS_LOCATE=false
+  - WATIR_WEBDRIVER_BROWSER=firefox NATIVE_EVENTS=true
   - WATIR_WEBDRIVER_BROWSER=chrome
   - WATIR_WEBDRIVER_BROWSER=chrome ALWAYS_LOCATE=false
-  # - WATIR_WEBDRIVER_BROWSER=firefox NATIVE_EVENTS=true
-  # - WATIR_WEBDRIVER_BROWSER=chrome NATIVE_EVENTS=true
+  - WATIR_WEBDRIVER_BROWSER=chrome NATIVE_EVENTS=true
