Can't assume the Gemfile is only evaluated once. This should work though.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ notifications:
   recipients:
     - jari.bakken@gmail.com
   irc: "irc.freenode.net#watir"
+before_install:
+  - gem install selenium-webdriver --version 2.27.0.rc1
 before_script:
   - support/travis.sh
 env:
