notify me about travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
 notifications:
   recipients:
     - jari.bakken@gmail.com
+    - p0deje@gmail.com
   irc: "irc.freenode.net#watir"
 before_install:
   - gem install selenium-webdriver --version 2.27.0.rc1
