--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ env:
   - WATIR_WEBDRIVER_BROWSER=chrome ALWAYS_LOCATE=false
   - WATIR_WEBDRIVER_BROWSER=chrome PREFER_CSS=1 SELECTOR_STATS=1
   - WATIR_WEBDRIVER_BROWSER=phantomjs
+  - WATIR_WEBDRIVER_BROWSER=phantomjs ALWAYS_LOCATE=false
+  - WATIR_WEBDRIVER_BROWSER=phantomjs PREFER_CSS=1 SELECTOR_STATS=1
 matrix:
   allow_failures:
     - rvm: ruby-head
