Allow phantomjs to fail until Jarmo gets the binary upgraded to 64-bit.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,8 @@ env:
   - WATIR_WEBDRIVER_BROWSER=phantomjs
   - WATIR_WEBDRIVER_BROWSER=phantomjs ALWAYS_LOCATE=false
   - WATIR_WEBDRIVER_BROWSER=phantomjs PREFER_CSS=1 SELECTOR_STATS=1
+matrix:
+  allow_failures:
+    - env: WATIR_WEBDRIVER_BROWSER=phantomjs
+    - env: WATIR_WEBDRIVER_BROWSER=phantomjs ALWAYS_LOCATE=false
+    - env: WATIR_WEBDRIVER_BROWSER=phantomjs PREFER_CSS=1 SELECTOR_STATS=1
