Update ChromeDriver to 2.9. Closes #240

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ env:
   - WATIR_WEBDRIVER_BROWSER=firefox
   - WATIR_WEBDRIVER_BROWSER=firefox ALWAYS_LOCATE=false
   - WATIR_WEBDRIVER_BROWSER=firefox PREFER_CSS=1 SELECTOR_STATS=1
-  # - WATIR_WEBDRIVER_BROWSER=chrome
-  # - WATIR_WEBDRIVER_BROWSER=chrome ALWAYS_LOCATE=false
-  # - WATIR_WEBDRIVER_BROWSER=chrome PREFER_CSS=1 SELECTOR_STATS=1
+  - WATIR_WEBDRIVER_BROWSER=chrome
+  - WATIR_WEBDRIVER_BROWSER=chrome ALWAYS_LOCATE=false
+  - WATIR_WEBDRIVER_BROWSER=chrome PREFER_CSS=1 SELECTOR_STATS=1
   - WATIR_WEBDRIVER_BROWSER=phantomjs
   - WATIR_WEBDRIVER_BROWSER=phantomjs ALWAYS_LOCATE=false
   - WATIR_WEBDRIVER_BROWSER=phantomjs PREFER_CSS=1 SELECTOR_STATS=1
