--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,19 @@ notifications:
     - p0deje@gmail.com
     - jarmo.p@gmail.com
   irc: "irc.freenode.net#watir"
-before_script:
-  - support/travis.sh
+before_script: support/travis.sh
+script: bundle exec rake $RAKE_TASK
 env:
-  - WATIR_WEBDRIVER_BROWSER=firefox
-  - WATIR_WEBDRIVER_BROWSER=firefox ALWAYS_LOCATE=false
-  - WATIR_WEBDRIVER_BROWSER=firefox PREFER_CSS=1 SELECTOR_STATS=1
-  - WATIR_WEBDRIVER_BROWSER=chrome
-  - WATIR_WEBDRIVER_BROWSER=chrome ALWAYS_LOCATE=false
-  - WATIR_WEBDRIVER_BROWSER=chrome PREFER_CSS=1 SELECTOR_STATS=1
-  - WATIR_WEBDRIVER_BROWSER=phantomjs
-  - WATIR_WEBDRIVER_BROWSER=phantomjs ALWAYS_LOCATE=false
-  - WATIR_WEBDRIVER_BROWSER=phantomjs PREFER_CSS=1 SELECTOR_STATS=1
+  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=firefox
+  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=firefox ALWAYS_LOCATE=false
+  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=firefox PREFER_CSS=1 SELECTOR_STATS=1
+  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=chrome
+  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=chrome ALWAYS_LOCATE=false
+  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=chrome PREFER_CSS=1 SELECTOR_STATS=1
+  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs
+  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs ALWAYS_LOCATE=false
+  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs PREFER_CSS=1 SELECTOR_STATS=1
+  - RAKE_TASK=yard:doctest
 matrix:
   allow_failures:
     - env: WATIR_WEBDRIVER_BROWSER=phantomjs
