--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,27 @@
 rvm:
   - 1.9.3
   - 2.0.0
-notifications:
-  recipients:
-    - jari.bakken@gmail.com
-    - p0deje@gmail.com
-    - jarmo.p@gmail.com
-  irc: "irc.freenode.net#watir"
+# notifications:
+#   recipients:
+#     - jari.bakken@gmail.com
+#     - p0deje@gmail.com
+#     - jarmo.p@gmail.com
+#   irc: "irc.freenode.net#watir"
 before_script: support/travis.sh
 script: bundle exec rake $RAKE_TASK
 env:
-  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=firefox
-  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=firefox ALWAYS_LOCATE=false
-  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=firefox PREFER_CSS=1 SELECTOR_STATS=1
-  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=chrome
-  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=chrome ALWAYS_LOCATE=false
-  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=chrome PREFER_CSS=1 SELECTOR_STATS=1
-  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs
-  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs ALWAYS_LOCATE=false
-  - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs PREFER_CSS=1 SELECTOR_STATS=1
+  # - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=firefox
+  # - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=firefox ALWAYS_LOCATE=false
+  # - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=firefox PREFER_CSS=1 SELECTOR_STATS=1
+  # - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=chrome
+  # - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=chrome ALWAYS_LOCATE=false
+  # - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=chrome PREFER_CSS=1 SELECTOR_STATS=1
+  # - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs
+  # - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs ALWAYS_LOCATE=false
+  # - RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs PREFER_CSS=1 SELECTOR_STATS=1
   - RAKE_TASK=yard:doctest
 matrix:
   allow_failures:
-    - env: WATIR_WEBDRIVER_BROWSER=phantomjs
-    - env: WATIR_WEBDRIVER_BROWSER=phantomjs ALWAYS_LOCATE=false
-    - env: WATIR_WEBDRIVER_BROWSER=phantomjs PREFER_CSS=1 SELECTOR_STATS=1
+    - env: RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs
+    - env: RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs ALWAYS_LOCATE=false
+    - env: RAKE_TASK=spec WATIR_WEBDRIVER_BROWSER=phantomjs PREFER_CSS=1 SELECTOR_STATS=1
