--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
   - 2.2
   - 2.3.0
 addons:
+  firefox: latest
   apt:
     packages:
       - unzip
@@ -17,8 +18,8 @@ notifications:
   slack:
     secure: BLsBCm33R32VNRccrLx9F0P24X6BVpVHj1OWaN4Kyn6g9qXteIwC2VKVMnKNbifpojfMkrn0OeFQFK1O1DSOsC3mgzn/udoB+DnUGcSemFUn04xhbYF5SI+3zGPKPo0JLvjjdEKSSma84YwKdrj88pGUK34p01gL8hiaqjFzWdk=
 before_script:
-  - mkdir travis-phantomjs
-  - export PATH=$PWD/travis-phantomjs:$PATH
+  - mkdir travis-drivers
+  - export PATH=$PWD/travis-drivers:$PATH
   - support/travis.sh
 script: bundle exec rake $RAKE_TASK
 env:
