--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-sudo: false
+dist: trusty
+sudo: require
 rvm:
   - 2.2.6
   - 2.3.3
@@ -9,6 +10,7 @@ addons:
     packages:
       - unzip
       - libxss1
+      - google-chrome-stable
 cache: bundler
 notifications:
   recipients:
