--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache: bundler
 notifications:
   slack:
     secure: BLsBCm33R32VNRccrLx9F0P24X6BVpVHj1OWaN4Kyn6g9qXteIwC2VKVMnKNbifpojfMkrn0OeFQFK1O1DSOsC3mgzn/udoB+DnUGcSemFUn04xhbYF5SI+3zGPKPo0JLvjjdEKSSma84YwKdrj88pGUK34p01gL8hiaqjFzWdk=
-+before_install:
+before_install:
   - gem update --system
 
 before_script:
