add support for rubocop

--- a/.travis.yml
+++ b/.travis.yml
@@ -77,3 +77,6 @@ matrix:
       - env: RAKE_TASK=yard:doctest
         <<: *five
         <<: *chrome
+      - env: RAKE_TASK=rubocop
+        <<: *three
+        <<: *chrome
