Run Selenium Stats to gauge major improvements or major issues with refactors

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,9 @@ matrix:
       - env: RAKE_TASK=spec:chrome HEADLESS=true
         <<: *five
         <<: *chrome
+      - env: RAKE_TASK=spec:stats
+        <<: *five
+        <<: *chrome
       - env: RAKE_TASK=yard:doctest
         <<: *five
         <<: *chrome
