update to rubocop 0.59

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -136,3 +136,6 @@ Style/Documentation:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Naming/FileName:
+  Exclude:
+    - 'lib/watir-webdriver.rb'
