--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -56,6 +56,7 @@ Metrics/MethodLength:
   Exclude:
   - 'lib/watir/locators/element/selector_builder.rb'
   - 'lib/watir/locators/element/selector_builder/xpath.rb'
+  - 'lib/watir/locators/element/selector_builder/regexp_disassembler.rb'
 
 # Configuration parameters: CountComments.
 Metrics/ClassLength:
@@ -83,6 +84,7 @@ Metrics/AbcSize:
   Max: 20
   Exclude:
     - 'lib/watir/locators/element/selector_builder.rb'
+    - 'lib/watir/locators/element/selector_builder/regexp_disassembler.rb'
     - 'lib/watir/locators/element/selector_builder/xpath.rb'
     - 'lib/watir/locators/element/locator.rb'
     - 'lib/watir/generator/base/generator.rb'
