get the tests passing

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -121,6 +121,10 @@ Style/GlobalVars:
   AllowedVariables:
     - $browser
 
+Style/RegexpLiteral:
+  Exclude:
+    - 'spec/watirspec/selector_builder/element_spec.rb'
+
 ### Cop supports --auto-correct.
 ### Configuration parameters: EnforcedStyle, ConsistentQuotesInMultiline.
 ## SupportedStyles: single_quotes, double_quotes
