improve type check with constant instead of multiple conditionals

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,6 +35,10 @@ Lint/HandleExceptions:
   Exclude:
     - 'lib/watirspec.rb'
 
+Lint/UnifiedInteger:
+  Exclude:
+  - 'lib/watir/locators/element/selector_builder.rb'
+
 # Configuration parameters: CountComments, ExcludedMethods.
 # ExcludedMethods: refine
 Metrics/BlockLength:
