--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,8 @@ matrix:
       - env: RAKE_TASK=spec:chrome HEADLESS=true
         <<: *five
         <<: *chrome
+      - env: RAKE_TASK=spec:unit
+        <<: *five
       - env: RAKE_TASK=spec:stats
         <<: *five
         <<: *chrome
