--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,9 +4,9 @@ clone_depth: 100
 install:
   - set PATH=C:\Ruby23\bin;%PATH%
   - bundle install
-  - support/appveyor.cmd
 test_script:
   - bundle exec rake %RAKE_TASK%
 environment:
   matrix:
     - RAKE_TASK: spec:firefox
+    - RAKE_TASK: spec:chrome
