Use Ruby 2.5 on Appveyor.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,8 @@ version: "#{build}"
 build: off
 clone_depth: 100
 install:
-  - set PATH=C:\Ruby23\bin;%PATH%
+  - set PATH=C:\Ruby25\bin;%PATH%
+  - gem update --system
   - bundle install
 test_script:
   - bundle exec rake %RAKE_TASK%
