--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,15 @@ before_script:
 script: bundle exec rake $RAKE_TASK
 
 _version:
-  three: &three
-    language: ruby
-    rvm: 2.3.8
-  four: &four
-    language: ruby
-    rvm: 2.4.5
   five: &five
     language: ruby
-    rvm: 2.5.3
+    rvm: 2.5.8
+  six: &six
+    language: ruby
+    rvm: 2.6.6
+  seven: &seven
+    language: ruby
+    rvm: 2.7.1
 
 _browsers:
   firefox: &firefox-latest
@@ -39,49 +39,49 @@ _browsers:
 matrix:
   include:
       - env: RAKE_TASK=spec:remote_firefox
-        <<: *five
+        <<: *seven
         <<: *firefox-latest
       - env: RAKE_TASK=spec:remote_chrome
-        <<: *five
+        <<: *seven
         <<: *chrome
       - env: RAKE_TASK=spec:firefox RELAXED_LOCATE=false
-        <<: *five
+        <<: *seven
         <<: *firefox-latest
       - env: RAKE_TASK=spec:firefox
-        <<: *five
+        <<: *seven
         <<: *firefox-latest
       - env: RAKE_TASK=spec:firefox
-        <<: *four
+        <<: *six
         <<: *firefox-latest
       - env: RAKE_TASK=spec:firefox
         <<: *three
         <<: *firefox-latest
       - env: RAKE_TASK=spec:chrome
+        <<: *seven
+        <<: *chrome
+      - env: RAKE_TASK=spec:chrome
+        <<: *six
+        <<: *chrome
+      - env: RAKE_TASK=spec:chrome
         <<: *five
-        <<: *chrome
-      - env: RAKE_TASK=spec:chrome
-        <<: *four
-        <<: *chrome
-      - env: RAKE_TASK=spec:chrome
-        <<: *three
         <<: *chrome
       - env: RAKE_TASK=spec:chrome RELAXED_LOCATE=false
-        <<: *five
+        <<: *seven
         <<: *chrome
       - env: RAKE_TASK=spec:chrome W3C=true
-        <<: *five
+        <<: *seven
         <<: *chrome
       - env: RAKE_TASK=spec:chrome HEADLESS=true
-        <<: *five
+        <<: *seven
         <<: *chrome
       - env: RAKE_TASK=spec:unit
-        <<: *five
+        <<: *seven
       - env: RAKE_TASK=spec:stats
-        <<: *five
+        <<: *seven
         <<: *chrome
       - env: RAKE_TASK=yard:doctest
-        <<: *five
+        <<: *seven
         <<: *chrome
       - env: RAKE_TASK=rubocop
-        <<: *three
+        <<: *five
         <<: *chrome
