identified bug in current Firefox

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ matrix:
         <<: *six
         <<: *firefox-latest
       - env: RAKE_TASK=spec:firefox
-        <<: *three
+        <<: *five
         <<: *firefox-latest
       - env: RAKE_TASK=spec:chrome
         <<: *seven
