--- a/.github/workflows/safari.yml
+++ b/.github/workflows/safari.yml
@@ -5,13 +5,13 @@ on:
   - pull_request
 
 jobs:
-  local-tests:
-    name: Local Tests
+  tests:
+    name: ${{ matrix.test }} Tests
     runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
-        ruby: [ 2.6, 3.0 ]
+        test: [safari remote_safari]
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/enable-safari
@@ -19,9 +19,9 @@ jobs:
           echo "COVERAGE=true" >> $GITHUB_ENV
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
+          ruby-version: 2.6
       - run: bundle install
       - run: |
-          bundle exec rake spec:safari
+          bundle exec rake spec:${{ matrix.test }}
         env:
           DISPLAY: :99
