--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -5,14 +5,14 @@ on:
   - pull_request
 
 jobs:
-  local-tests:
-    name: Local Tests
+  tests:
+    name: ${{ matrix.test }} Tests
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
+        test: [edge remote_edge]
         os: [macos-latest, windows-latest]
-        ruby: [ 2.6, 3.0 ]
     steps:
       - uses: actions/checkout@v2
       - run: |
@@ -20,9 +20,9 @@ jobs:
         if: matrix.os == 'macos-latest'
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
+          ruby-version: 2.6
       - run: bundle install
       - run: |
-          bundle exec rake spec:edge
+          bundle exec rake spec:${{ matrix.test }}
         env:
           DISPLAY: :99
