--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -5,14 +5,14 @@ on:
   - pull_request
 
 jobs:
-  local-tests:
-    name: Local Tests
+  tests:
+    name: ${{ matrix.test }} Tests
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
+        test: [firefox remote_firefox]
         os: [ubuntu-latest, macos-latest, windows-latest]
-        ruby: [ 2.6, 3.0 ]
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-linux
@@ -27,9 +27,9 @@ jobs:
           matrix.os == 'macos-latest'
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
+          ruby-version: 2.6
       - run: bundle install
       - run: |
-          bundle exec rake spec:firefox
+          bundle exec rake spec:${{ matrix.test }}
         env:
           DISPLAY: :99
