--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        test: [firefox remote_firefox]
+        test: [firefox, remote_firefox]
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
