update to Se 4.0.2

--- a/.github/workflows/chrome.yml
+++ b/.github/workflows/chrome.yml
@@ -30,6 +30,6 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
       - run: bundle install
       - run: |
-          bundle exec rake spec:${{ matrix.text }}
+          bundle exec rake spec:${{ matrix.test }}
         env:
           DISPLAY: :99
