--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   tests:
-    name: ${{ matrix.test }} Tests
+    name: ${{ matrix.test }} - ${{ matrix.os }} Tests
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
