write additional Browser tests to document existing capabilities behavior

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,6 +33,10 @@ Metrics/BlockLength:
     - 'watir.gemspec'
     - 'Rakefile'
 
+Metrics/ModuleLength:
+  Exclude:
+    - 'spec/**/*'
+
 Metrics/ClassLength:
   Max: 93
   Exclude:
